--- a/cloudTools.ipynb
+++ b/cloudTools.ipynb
@@ -238,14 +238,7 @@
     "\n",
     "> **Kafka feeds your warehouse → your warehouse feeds your Feature Store → the Feature Store feeds SageMaker/Vertex AI → SageMaker/Vertex AI feed your applications.**\n",
     "\n",
-    "This is how modern AI systems turn **raw streams into real-time intelligence**.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "If you want, I can also generate:\n",
-    "📘 A LinkedIn carousel version\n",
-    "📊 A diagram image\n",
-    "📝 A shorter 30-line summary for interviews or presentations\n"
+    "This is how modern AI systems turn **raw streams into real-time intelligence**."
    ]
   },
   {
